# swim-coach-back-end

./: .coverage  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  dependabot-auto-merge.yml
alembic/: env.py
alembic/versions/: 0556b49ea11e_add_swim_times_table.py  10abbec90eff_add_swim_knowledge_table.py  306c260d569b_add_token_valid_after_to_users.py  5a1adcc1fe2c_add_sex_and_deactivation_reason_check_.py  65ac455737d5_initial_schema.py  6d8532874f4d_add_goals_table.py  878efefb4ddc_widen_profile_sex_column.py  b5cd6ffca12b_add_unit_preference_to_profiles.py
app/: auth_config.py  config.py  conftest.py  database.py  database_test.py  db_config.py  deps.py  docs.py  docs_test.py  domain_isolation_test.py  enums.py  main.py  model_utils.py  models.py  rate_limit.py  rate_limit_config.py  rate_limit_config_test.py  rate_limit_test.py  redis_config.py  schemas.py  security.py  security_test.py  test_config.py  test_deps.py  test_domain_isolation.py  test_model_utils.py
app/auth/: router.py  schema.py  schema_test.py  test_router.py
app/goal/: enums.py  model.py  router.py  router_test.py  schema.py  schema_test.py  test_model.py
app/models/: __init__.py  goal.py  profile.py  swim_time.py
app/profile/: enums.py  model.py  router.py  schema.py  schema_test.py  test_model.py
app/rag/: answer.py  clients.py  config.py  embeddings.py  models.py  models_test.py  query.py  retrieval.py  router.py  schema.py  sharpen.py  sharpen_flag.py  sharpen_test.py  test_clients.py  test_config.py  test_embeddings.py  test_query.py  test_retrieval.py  test_router.py  test_schema.py  test_training.py  training.py
app/routers/: auth.py  goals.py  profile.py  stats.py  swim_times.py  training.py  users.py
app/schemas/: __init__.py  swim_times.py
app/stats/: router.py  router_test.py  schema.py
app/swim_time/: enums.py  model.py  model_test.py  router.py  schema.py  schema_test.py
app/user/: model.py  model_test.py  router.py  schema.py
scripts/: cleanup_e2e_users.py  spike_citations_ingestion.py
scripts/hooks/: post-merge
tests/: conftest.py  test_auth.py  test_config.py  test_database.py  test_domain_isolation.py  test_goals.py  test_main.py  test_profile.py  test_rag_answer.py  test_rag_models.py  test_rag_retrieval.py  test_rag_sharpen.py  test_rag_sharpen_flag.py  test_rag_training.py  test_stats.py  test_swim_times.py  test_training.py  test_users.py
