[project]
name = "swimcoach-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "anthropic>=0.116.0",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "limits[redis]>=5.8.0",
    "pgvector>=0.5.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "redis>=7.4.1",
    "sqlalchemy>=2.0.51",
    "voyageai>=0.5.0",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "httpx>=0.28.1",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "testcontainers[postgres]>=4.14.2",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
testpaths = ["app", "tests"]
pythonpath = ["."]
addopts = "-ra --cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
branch = true
# Tests are colocated inside app/ (e.g. app/goal/test_router.py) rather than kept in
# a separate directory. Without this, a test file trivially covering itself just by
# running would count toward "app" coverage, padding the reported percentage instead
# of measuring what this has always measured: how much of the actual application
# code is exercised.
omit = ["*/test_*.py"]

[tool.ruff]
line-length = 120
exclude = ["alembic/versions/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends"]

[tool.pyright]
include = ["app", "tests"]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
